--- a/style/style.css
+++ b/style/style.css
@@ -30,8 +30,8 @@ html {
   position: relative;
   left: 12px;
   top: 125px;
-  -webkit-box-shadow: 10px 5px 5px 5px, -10px -5px -5px -5px;
-          box-shadow: 10px 5px 5px 5px, -10px -5px -5px -5px;
+  -webkit-box-shadow: 1px 1px 3px, -1px -1px 3px;
+          box-shadow: 1px 1px 3px, -1px -1px 3px;
 }
 
 .hero .title,
@@ -39,34 +39,43 @@ html {
 .hero .likerow,
 .hero .timerow {
   position: relative;
-  border: red solid 5px;
 }
 
 .hero .title {
-  top: -67px;
-  left: 212px;
+  top: 21px;
+  left: 219px;
   color: #f5f5f5;
   font-size: 1.75rem;
   font-weight: 600;
 }
 
 .hero .site {
-  top: -61px;
-  left: 212px;
+  top: 23px;
+  left: 219px;
   color: #f5f5f5;
   font-size: 1.2rem;
 }
 
 .hero .bttn {
   border: white dotted 3px;
-  background-color: blue;
+  background-color: white;
   width: 100px;
   cursor: pointer;
 }
 
 .hero .likerow {
-  top: -46px;
-  left: 423px;
+  top: -8px;
+  left: 427px;
+}
+
+.hero .likerow .bttn {
+  height: 30px;
+  border-radius: 2px;
+}
+
+.hero .likerow .b2,
+.hero .likerow .b3 {
+  border-right: rgba(0, 0, 0, 0.2) solid 1px;
 }
 
 .hero .likerow .likebuttons {
@@ -75,27 +84,49 @@ html {
   display: inline-flex;
   top: 30px;
   left: 30px;
-  border: black solid 3px;
 }
 
-.hero .likerow .likebuttons .bttn {
-  height: 30px;
-  border-radius: 5px;
+.hero .likerow .likebuttons .b1 {
+  margin-right: 8px;
 }
 
 .hero .timerow {
-  top: -29px;
-  left: 196px;
+  top: 2px;
+  left: -6px;
+  z-index: -1;
 }
 
 .hero .timerow .timebuttons {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  border: black solid 3px;
 }
 
 .hero .timerow .timebuttons .bttn {
   height: 60px;
+}
+
+.hero .timerow::before {
+  content: " \00a0";
+  display: inline-block;
+  background-color: white;
+  position: relative;
+  left: 6px;
+  top: -18px;
+  z-index: -1;
+  height: 60px;
+  width: 200px;
+}
+
+.hero .timerow::after {
+  content: " \00a0";
+  display: inline-block;
+  background-color: white;
+  position: relative;
+  right: -691px;
+  top: -78px;
+  z-index: 999;
+  height: 60px;
+  width: 165px;
 }
 /*# sourceMappingURL=style.css.map */
