--- a/style/style.scss
+++ b/style/style.scss
@@ -123,3 +123,142 @@ html {
     width: 165px;
   }
 }
+.container {
+  // position: static;
+  display: grid;
+  grid-template-columns: 328px 512px;
+  grid-template-rows: repeat(5, 100px);
+  
+  margin-top: 5rem;
+  justify-content: center;
+  gap: 10px;
+  
+
+  .gridi {
+    background-color: white;
+  }
+  
+  .item1 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    display: grid;
+    grid-template-columns: 10px 100px 1fr;
+    gap: 2px;
+    color: blue;
+    .gridi2 {
+      background: url(https://source.unsplash.com/random/300×300) no-repeat
+      center/cover;
+      grid-column: 2 / 3;
+      grid-row: 1 / 6;
+    }
+    .gridi3 {
+      align-self: center;
+      grid-row: 2 / 3;
+      grid-column: 3 / 4;
+      font-size: .75rem;
+    }
+    .gridi4 {
+      
+      grid-column: 3 / 4;
+      grid-row: 6 / 8;
+      color: black;
+      background-color: white;
+      text-align: center;
+      align-self: center;
+    }
+    .gridi5 {
+      grid-column: 3 / 4;
+      grid-row: 8 / 9;
+      padding: 0;
+      font-size: .75rem;
+    }
+    .gridi7 {
+      grid-column: 2 / 3;
+      grid-row: 6 /7;
+    }
+    .gridi8 {
+      grid-column: 3 / 4;
+      grid-row: 6 /7;
+    }
+  }
+  .item2 {
+    display: grid;
+    grid-template-columns: repeat(3, 108px);
+    grid-template-rows: repeat(3, 108px);
+    gap: 1px;
+    grid-row: 1 / 5;
+    .items1 {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      background: url(https://source.unsplash.com/random/100×100) no-repeat
+      center/cover;
+    }
+    .items2 {
+      background: url(https://source.unsplash.com/random/103×100) no-repeat
+      center/cover;
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+    }
+    .items3 {
+      background: url(https://source.unsplash.com/random/302×300) no-repeat
+      center/cover;
+      grid-column: 3 / 4;
+      grid-row: 2 / 3;
+    }
+    .items4 {
+      background: url(https://source.unsplash.com/random/105×100) no-repeat
+      center/cover;
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+    }
+    .items5 {
+      background: url(https://source.unsplash.com/random/100×101) no-repeat
+      center/cover;
+      grid-column: 2 / 3;
+      grid-row: 3 / 4;
+    }
+    .items6 {
+      background: url(https://source.unsplash.com/random/100×102) no-repeat
+      center/cover;
+      grid-column: 3 / 4;
+      grid-row: 3 / 4;
+    }
+    .items7 {
+      background: url(https://source.unsplash.com/random/100×103) no-repeat
+      center/cover;
+      grid-column: 1 / 2;
+      grid-row: 4 / 5;
+    }
+    .items8 {
+      background: url(https://source.unsplash.com/random/100×104) no-repeat
+      center/cover;
+      grid-column: 2 / 3;
+      grid-row: 4 / 5;
+    }
+    .items9 {
+      background: url(https://source.unsplash.com/random/100×105) no-repeat
+      center/cover;
+      grid-column: 3 / 4;
+      grid-row: 4 / 5;
+    }
+    .item10 {
+      
+      grid-column: 1 / 2;
+      grid-row: 1 / 4;
+      color: blue;
+    }
+    
+  }
+  .item3 {
+    grid-row: 4 / 5;
+    grid-column: 1 / 2;
+    
+    
+  }
+  .item4 {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+  }
+}
