--- a/style/style.css
+++ b/style/style.css
@@ -13,255 +13,320 @@ html {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.hero {
+.page-container {
+  min-height: 100vh;
+  position: relative;
+  margin: auto;
+  width: 850px;
+  top: 20px;
+}
+
+.page-container .title,
+.page-container .site,
+.page-container .likerow,
+.page-container .timerow,
+.page-container .maincontainer {
+  position: absolute;
+}
+
+.page-container .hero {
+  position: absolute;
   width: 850px;
   height: 300px;
   margin: auto;
   margin-top: 10px;
   margin-bottom: 0;
   background-color: #5566a8;
+  height: 264px;
+  top: -9px;
 }
 
-.hero .picture {
-  height: 200px;
-  width: 200px;
+.page-container .hero .picture {
+  height: 186px;
+  width: 186px;
   background: url(https://source.unsplash.com/random/300×300) no-repeat center/cover;
-  position: relative;
-  left: 12px;
-  top: 125px;
+  position: absolute;
+  left: 20px;
+  top: 107px;
   box-shadow: 1px 1px 3px, -1px -1px 3px;
 }
 
-.hero .title,
-.hero .site,
-.hero .likerow,
-.hero .timerow {
-  position: relative;
-}
-
-.hero .title {
-  top: 21px;
-  left: 219px;
+.page-container .hero .title {
+  top: 144px;
+  left: 231px;
   color: #f5f5f5;
   font-size: 1.75rem;
   font-weight: 600;
 }
 
-.hero .site {
-  top: 23px;
-  left: 219px;
+.page-container .hero .site {
+  top: 175px;
+  left: 231px;
   color: #f5f5f5;
   font-size: 1.2rem;
 }
 
-.hero .bttn {
+.page-container .hero .bttn {
   border: white dotted 3px;
   background-color: white;
   width: 100px;
   cursor: pointer;
 }
 
-.hero .likerow {
-  top: -8px;
-  left: 427px;
+.page-container .hero .likerow {
+  top: 221px;
+  left: 430px;
 }
 
-.hero .likerow .bttn {
+.page-container .hero .bttn {
   height: 30px;
   border-radius: 2px;
 }
 
-.hero .likerow .b2,
-.hero .likerow .b3 {
+.page-container .hero .b2,
+.page-container .hero .b3 {
   border-right: rgba(0, 0, 0, 0.2) solid 1px;
 }
 
-.hero .likerow .likebuttons {
+.page-container .hero .likebuttons {
   display: inline-flex;
   top: 30px;
   left: 30px;
 }
 
-.hero .likerow .likebuttons .b1 {
+.page-container .hero .likebuttons .b1 {
   margin-right: 8px;
 }
 
-.hero .timerow {
-  top: 2px;
-  left: -6px;
+.page-container .hero .timerow {
+  top: 252px;
+  left: 200px;
   z-index: -1;
 }
 
-.hero .timerow .timebuttons {
+.page-container .hero .timerow .timebuttons {
   display: inline-flex;
 }
 
-.hero .timerow .timebuttons .bttn {
+.page-container .hero .timerow .timebuttons .bttn {
   height: 60px;
 }
 
-.hero .timerow::before {
+.page-container .hero .timerow::before {
   content: " \00a0";
   display: inline-block;
   background-color: white;
-  position: relative;
-  left: 6px;
-  top: -18px;
+  position: absolute;
+  left: -200px;
+  top: 0px;
   z-index: -1;
   height: 60px;
   width: 200px;
 }
 
-.hero .timerow::after {
+.page-container .hero .timerow::after {
   content: " \00a0";
   display: inline-block;
   background-color: white;
-  position: relative;
-  right: -691px;
-  top: -78px;
+  position: absolute;
+  right: -150px;
+  top: 0px;
   z-index: 999;
   height: 60px;
   width: 165px;
 }
 
-.container {
+.page-container .maincontainer {
+  position: absolute;
+  left: 0px;
+  top: 332px;
+  color: blue;
+}
+
+.page-container .maincontainer .container {
   display: grid;
   grid-template-columns: 328px 512px;
-  grid-template-rows: repeat(5, 100px);
-  margin-top: 5rem;
+  grid-template-rows: 10px repeat(7, 100px);
   justify-content: center;
   gap: 10px;
 }
 
-.container .gridi {
-  background-color: white;
+.page-container .maincontainer .container .gridi {
+  background-color: #f6f7f8;
 }
 
-.container .item1 {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
+.page-container .maincontainer .container .item1 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 4;
   display: grid;
-  grid-template-columns: 10px 100px 1fr;
+  grid-template-columns: 10px 75px 1fr;
+  grid-template-rows: 10px 75px 8px 2fr 1fr;
   gap: 2px;
   color: blue;
+  background-color: #f6f7f8;
 }
 
-.container .item1 .gridi2 {
+.page-container .maincontainer .container .item1 .gridi2 {
   background: url(https://source.unsplash.com/random/300×300) no-repeat center/cover;
   grid-column: 2 / 3;
-  grid-row: 1 / 6;
+  grid-row: 2 / 3;
+  height: 75px;
 }
 
-.container .item1 .gridi3 {
+.page-container .maincontainer .container .item1 .gridi3 {
   align-self: center;
   grid-row: 2 / 3;
   grid-column: 3 / 4;
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
-.container .item1 .gridi4 {
-  grid-column: 3 / 4;
-  grid-row: 6 / 8;
+.page-container .maincontainer .container .item1 .gridi4 {
+  grid-column: 2 / 4;
+  grid-row: 4 / 5;
   color: black;
-  background-color: white;
-  text-align: center;
   align-self: center;
+  height: 100px;
+  color: black;
+  font-size: .8rem;
 }
 
-.container .item1 .gridi5 {
-  grid-column: 3 / 4;
-  grid-row: 8 / 9;
-  padding: 0;
-  font-size: .75rem;
+.page-container .maincontainer .container .item1 .gridi5 {
+  grid-column: 2 / 4;
+  grid-row: 5 / 6;
+  font-size: 0.75rem;
 }
 
-.container .item1 .gridi7 {
-  grid-column: 2 / 3;
-  grid-row: 6 /7;
-}
-
-.container .item1 .gridi8 {
-  grid-column: 3 / 4;
-  grid-row: 6 /7;
-}
-
-.container .item2 {
+.page-container .maincontainer .container .item2 {
   display: grid;
   grid-template-columns: repeat(3, 108px);
-  grid-template-rows: repeat(3, 108px);
+  grid-template-rows: 1fr repeat(3, 108px);
   gap: 1px;
   grid-row: 1 / 5;
+  background-color: #f6f7f8;
+  color: black;
 }
 
-.container .item2 .items1 {
+.page-container .maincontainer .container .item2 .item2::after {
+  content: "dfdfdfd \00a0";
+  background-color: yellow;
+  border: black solid 3px;
+  position: relative;
+  top: 33px;
+  right: 33px;
+  z-index: 99999;
+}
+
+.page-container .maincontainer .container .item2 .items1 {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   background: url(https://source.unsplash.com/random/100×100) no-repeat center/cover;
 }
 
-.container .item2 .items2 {
+.page-container .maincontainer .container .item2 .items2 {
   background: url(https://source.unsplash.com/random/103×100) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
 
-.container .item2 .items3 {
+.page-container .maincontainer .container .item2 .items3 {
   background: url(https://source.unsplash.com/random/302×300) no-repeat center/cover;
   grid-column: 3 / 4;
   grid-row: 2 / 3;
 }
 
-.container .item2 .items4 {
+.page-container .maincontainer .container .item2 .items4 {
   background: url(https://source.unsplash.com/random/105×100) no-repeat center/cover;
   grid-column: 1 / 2;
   grid-row: 3 / 4;
 }
 
-.container .item2 .items5 {
+.page-container .maincontainer .container .item2 .items5 {
   background: url(https://source.unsplash.com/random/100×101) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 }
 
-.container .item2 .items6 {
+.page-container .maincontainer .container .item2 .items6 {
   background: url(https://source.unsplash.com/random/100×102) no-repeat center/cover;
   grid-column: 3 / 4;
   grid-row: 3 / 4;
 }
 
-.container .item2 .items7 {
+.page-container .maincontainer .container .item2 .items7 {
   background: url(https://source.unsplash.com/random/100×103) no-repeat center/cover;
   grid-column: 1 / 2;
   grid-row: 4 / 5;
 }
 
-.container .item2 .items8 {
+.page-container .maincontainer .container .item2 .items8 {
   background: url(https://source.unsplash.com/random/100×104) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 4 / 5;
 }
 
-.container .item2 .items9 {
+.page-container .maincontainer .container .item2 .items9 {
   background: url(https://source.unsplash.com/random/100×105) no-repeat center/cover;
   grid-column: 3 / 4;
   grid-row: 4 / 5;
 }
 
-.container .item2 .item10 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 4;
-  color: blue;
+.page-container .maincontainer .container .item2 .item10 {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  background-color: #f6f7f8;
+  color: rgba(29, 29, 29, 0.685);
 }
 
-.container .item3 {
-  grid-row: 4 / 5;
-  grid-column: 1 / 2;
+.page-container .maincontainer .container .item2 .item11 {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  justify-self: end;
+  background-color: #f6f7f8;
+  color: rgba(29, 29, 29, 0.685);
 }
 
-.container .item4 {
-  grid-row: 3 / 4;
+.page-container .maincontainer .container .item3 {
   grid-column: 2 / 3;
+  grid-row: 4 / 7;
+  display: grid;
+  grid-template-columns: 10px 75px 1fr;
+  grid-template-rows: 10px 75px 8px 200px 20px;
+  color: blue;
+  background-color: #f6f7f8;
+}
+
+.page-container .maincontainer .container .item3 .gridi2 {
+  background: url(https://source.unsplash.com/random/300×300) no-repeat center/cover;
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+.page-container .maincontainer .container .item3 .gridi3 {
+  align-self: center;
+  font-size: 0.75rem;
+  grid-row: 2 / 3;
+  grid-column: 3 / 4;
+}
+
+.page-container .maincontainer .container .item3 .gridi4 {
+  background: url(https://source.unsplash.com/random/103×100) no-repeat center/cover;
+  text-align: center;
+  grid-row: 4 / 5;
+  grid-column: 1 / 4;
+}
+
+.page-container .maincontainer .container .item3 .gridi5 {
+  padding: 0;
+  font-size: 0.75rem;
+  grid-row: 5 / 6;
+  grid-column: 2 / 4;
+  background-color: #f6f7f8;
+}
+
+.page-container #footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
 /*# sourceMappingURL=style.css.map */
