--- a/style/style.scss
+++ b/style/style.scss
@@ -16,63 +16,76 @@ html {
   background-color: #e9eaed;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-// Top Section
-.hero {
-  width: 850px;
-  height: 300px;
+.page-container {
+  min-height: 100vh;
+  position: relative;
   margin: auto;
-  margin-top: 10px;
-  margin-bottom: 0;
-  background-color: $p-color;
-  // profile picture using random photo from Unsplash
-  // Every reload will load a new picture
-  .picture {
-    height: 200px;
-    width: 200px;
-    background: url(https://source.unsplash.com/random/300×300) no-repeat
-      center/cover;
-    position: relative;
-    left: 12px;
-    top: 125px;
-    box-shadow: 1px 1px 3px, -1px -1px 3px;
-  }
-  // makes each section relative for positioning
+  width: 850px;
+  top: 20px;
   .title,
   .site,
   .likerow,
-  .timerow {
-    position: relative;
+  .timerow,
+  .maincontainer {
+    position: absolute;
   }
-  // Profile name
-  .title {
-    top: 21px;
-    left: 219px;
-    color: $s-color;
-    font-size: 1.75rem;
-    font-weight: 600;
-  }
-  // profile site
-  .site {
-    top: 23px;
-    left: 219px;
-    color: $s-color;
-    font-size: 1.2rem;
-  }
-  // all buttons
-  .bttn {
-    border: white dotted 3px;
-    background-color: white;
-    width: 100px;
-    cursor: pointer;
-  }
-  // row of buttons with like button
-  .likerow {
+  // Top Section
+  .hero {
+    position: absolute;
+    width: 850px;
+    height: 300px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 0;
+    background-color: $p-color;
+    height: 264px;
+    top: -9px;
+    // padding-bottom: 2.5rem;
+    // profile picture using random photo from Unsplash
+    // Every reload will load a new picture
+    .picture {
+      height: 186px;
+      width: 186px;
+      background: url(https://source.unsplash.com/random/300×300) no-repeat
+        center/cover;
+      position: absolute;
+      left: 20px;
+      top: 107px;
+      box-shadow: 1px 1px 3px, -1px -1px 3px;
+    }
+    // makes each section relative for positioning
+
+    // Profile name
+    .title {
+      top: 144px;
+      left: 231px;
+      color: $s-color;
+      font-size: 1.75rem;
+      font-weight: 600;
+    }
+    // profile site
+    .site {
+      top: 175px;
+      left: 231px;
+      color: $s-color;
+      font-size: 1.2rem;
+    }
+    // all buttons
+    .bttn {
+      border: white dotted 3px;
+      background-color: white;
+      width: 100px;
+      cursor: pointer;
+    }
+    // row of buttons with like button
+    .likerow {
+      top: 221px;
+      left: 430px;
+    }
     .bttn {
       height: 30px;
       border-radius: 2px;
     }
-    top: -8px;
-    left: 427px;
     .b2,
     .b3 {
       border-right: rgba(0, 0, 0, 0.2) solid 1px;
@@ -86,179 +99,244 @@ html {
         margin-right: 8px;
       }
     }
-  }
-  // row of buttons with timeline button
-  .timerow {
-    top: 2px;
-    left: -6px;
-    z-index: -1;
-    .timebuttons {
-      display: inline-flex;
 
-      .bttn {
-        height: 60px;
+    // row of buttons with timeline button
+    .timerow {
+      top: 252px;
+      left: 200px;
+      z-index: -1;
+      .timebuttons {
+        display: inline-flex;
+        .bttn {
+          height: 60px;
+        }
+      }
+    }
+    .timerow::before {
+      content: " \00a0";
+      display: inline-block;
+      background-color: white;
+      position: absolute;
+      left: -200px;
+      top: 0px;
+      z-index: -1;
+      height: 60px;
+      width: 200px;
+    }
+    .timerow::after {
+      content: " \00a0";
+      display: inline-block;
+      background-color: white;
+      position: absolute;
+      right: -150px;
+      top: 0px;
+      z-index: 999;
+      height: 60px;
+      width: 165px;
+    }
+  }
+  // container for positioning
+  .maincontainer {
+    position: absolute;
+
+    left: 0px;
+    top: 332px;
+    color: blue;
+
+    // container for grid
+    .container {
+      // position: static;
+      display: grid;
+      grid-template-columns: 328px 512px;
+
+      grid-template-rows: 10px repeat(7, 100px);
+
+      // margin-top: 5rem;
+      justify-content: center;
+      gap: 10px;
+
+      .gridi {
+        background-color: #f6f7f8;
+      }
+      // grid for text post
+      .item1 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 4;
+        display: grid;
+        grid-template-columns: 10px 75px 1fr;
+        grid-template-rows: 10px 75px 8px 2fr 1fr;
+        gap: 2px;
+        color: blue;
+        background-color: #f6f7f8;
+
+        .gridi2 {
+          background: url(https://source.unsplash.com/random/300×300) no-repeat
+            center/cover;
+          grid-column: 2 / 3;
+          grid-row: 2 / 3;
+          height: 75px;
+        }
+        .gridi3 {
+          align-self: center;
+          grid-row: 2 / 3;
+          grid-column: 3 / 4;
+          font-size: 0.75rem;
+        }
+        .gridi4 {
+          grid-column: 2 / 4;
+          grid-row: 4 / 5;
+          color: black;
+          // background-color: white;
+          // text-align: ;
+          align-self: center;
+          // background: rgb(131, 58, 180);
+          // background: linear-gradient(
+          //   90deg,
+          //   rgba(131, 58, 180, 1) 0%,
+          //   rgba(253, 29, 29, 1) 50%,
+          //   rgba(252, 176, 69, 1) 100%
+          // );
+          height: 100px;
+          color: black;
+          font-size: 0.8rem;
+        }
+        .gridi5 {
+          grid-column: 2 / 4;
+          grid-row: 5 / 6;
+          // padding: 0;
+          font-size: 0.75rem;
+        }
+      }
+      // Photos grid
+      .item2 {
+        display: grid;
+        grid-template-columns: repeat(3, 108px);
+        grid-template-rows: 1fr repeat(3, 108px);
+        gap: 1px;
+        grid-row: 1 / 5;
+        background-color: #f6f7f8;
+        color: black;
+        .item2::after {
+          content: "dfdfdfd \00a0";
+          background-color: yellow;
+          border: $border;
+          position: relative;
+          top: 33px;
+          right: 33px;
+          z-index: 99999;
+        }
+        .items1 {
+          grid-column: 1 / 2;
+          grid-row: 2 / 3;
+          background: url(https://source.unsplash.com/random/100×100) no-repeat
+            center/cover;
+        }
+        .items2 {
+          background: url(https://source.unsplash.com/random/103×100) no-repeat
+            center/cover;
+          grid-column: 2 / 3;
+          grid-row: 2 / 3;
+        }
+        .items3 {
+          background: url(https://source.unsplash.com/random/302×300) no-repeat
+            center/cover;
+          grid-column: 3 / 4;
+          grid-row: 2 / 3;
+        }
+        .items4 {
+          background: url(https://source.unsplash.com/random/105×100) no-repeat
+            center/cover;
+          grid-column: 1 / 2;
+          grid-row: 3 / 4;
+        }
+        .items5 {
+          background: url(https://source.unsplash.com/random/100×101) no-repeat
+            center/cover;
+          grid-column: 2 / 3;
+          grid-row: 3 / 4;
+        }
+        .items6 {
+          background: url(https://source.unsplash.com/random/100×102) no-repeat
+            center/cover;
+          grid-column: 3 / 4;
+          grid-row: 3 / 4;
+        }
+        .items7 {
+          background: url(https://source.unsplash.com/random/100×103) no-repeat
+            center/cover;
+          grid-column: 1 / 2;
+          grid-row: 4 / 5;
+        }
+        .items8 {
+          background: url(https://source.unsplash.com/random/100×104) no-repeat
+            center/cover;
+          grid-column: 2 / 3;
+          grid-row: 4 / 5;
+        }
+        .items9 {
+          background: url(https://source.unsplash.com/random/100×105) no-repeat
+            center/cover;
+          grid-column: 3 / 4;
+          grid-row: 4 / 5;
+        }
+        .item10 {
+          grid-column: 1 / 3;
+          grid-row: 1 / 2;
+          background-color: #f6f7f8;
+          color: rgba(29, 29, 29, 0.685);
+        }
+        .item11 {
+          grid-column: 3 / 4;
+          grid-row: 1 / 2;
+          justify-self: end;
+          background-color: #f6f7f8;
+          color: rgba(29, 29, 29, 0.685);
+        }
+      }
+      // picture post
+      .item3 {
+        grid-column: 2 / 3;
+        grid-row: 4 / 7;
+
+        display: grid;
+        grid-template-columns: 10px 75px 1fr;
+        grid-template-rows: 10px 75px 8px 200px 20px;
+
+        color: blue;
+        background-color: #f6f7f8;
+        .gridi2 {
+          background: url(https://source.unsplash.com/random/300×300) no-repeat
+            center/cover;
+          grid-row: 2 / 3;
+          grid-column: 2 / 3;
+        }
+        .gridi3 {
+          align-self: center;
+          font-size: 0.75rem;
+          grid-row: 2 / 3;
+          grid-column: 3 / 4;
+        }
+        .gridi4 {
+          background: url(https://source.unsplash.com/random/103×100) no-repeat
+            center/cover;
+          text-align: center;
+          grid-row: 4 / 5;
+          grid-column: 1 / 4;
+        }
+        .gridi5 {
+          padding: 0;
+          font-size: 0.75rem;
+          grid-row: 5 / 6;
+          grid-column: 2 / 4;
+          background-color: #f6f7f8;
+        }
       }
     }
   }
-  .timerow::before {
-    content: " \00a0";
-    display: inline-block;
-    background-color: white;
-    position: relative;
-    left: 6px;
-    top: -18px;
-    z-index: -1;
-    height: 60px;
-    width: 200px;
-  }
-  .timerow::after {
-    content: " \00a0";
-    display: inline-block;
-    background-color: white;
-    position: relative;
-    right: -691px;
-    top: -78px;
-    z-index: 999;
-    height: 60px;
-    width: 165px;
-  }
-}
-.container {
-  // position: static;
-  display: grid;
-  grid-template-columns: 328px 512px;
-  grid-template-rows: repeat(5, 100px);
-  
-  margin-top: 5rem;
-  justify-content: center;
-  gap: 10px;
-  
-
-  .gridi {
-    background-color: white;
-  }
-  
-  .item1 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    display: grid;
-    grid-template-columns: 10px 100px 1fr;
-    gap: 2px;
-    color: blue;
-    .gridi2 {
-      background: url(https://source.unsplash.com/random/300×300) no-repeat
-      center/cover;
-      grid-column: 2 / 3;
-      grid-row: 1 / 6;
-    }
-    .gridi3 {
-      align-self: center;
-      grid-row: 2 / 3;
-      grid-column: 3 / 4;
-      font-size: .75rem;
-    }
-    .gridi4 {
-      
-      grid-column: 3 / 4;
-      grid-row: 6 / 8;
-      color: black;
-      background-color: white;
-      text-align: center;
-      align-self: center;
-    }
-    .gridi5 {
-      grid-column: 3 / 4;
-      grid-row: 8 / 9;
-      padding: 0;
-      font-size: .75rem;
-    }
-    .gridi7 {
-      grid-column: 2 / 3;
-      grid-row: 6 /7;
-    }
-    .gridi8 {
-      grid-column: 3 / 4;
-      grid-row: 6 /7;
-    }
-  }
-  .item2 {
-    display: grid;
-    grid-template-columns: repeat(3, 108px);
-    grid-template-rows: repeat(3, 108px);
-    gap: 1px;
-    grid-row: 1 / 5;
-    .items1 {
-      grid-column: 1 / 2;
-      grid-row: 2 / 3;
-      background: url(https://source.unsplash.com/random/100×100) no-repeat
-      center/cover;
-    }
-    .items2 {
-      background: url(https://source.unsplash.com/random/103×100) no-repeat
-      center/cover;
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-    }
-    .items3 {
-      background: url(https://source.unsplash.com/random/302×300) no-repeat
-      center/cover;
-      grid-column: 3 / 4;
-      grid-row: 2 / 3;
-    }
-    .items4 {
-      background: url(https://source.unsplash.com/random/105×100) no-repeat
-      center/cover;
-      grid-column: 1 / 2;
-      grid-row: 3 / 4;
-    }
-    .items5 {
-      background: url(https://source.unsplash.com/random/100×101) no-repeat
-      center/cover;
-      grid-column: 2 / 3;
-      grid-row: 3 / 4;
-    }
-    .items6 {
-      background: url(https://source.unsplash.com/random/100×102) no-repeat
-      center/cover;
-      grid-column: 3 / 4;
-      grid-row: 3 / 4;
-    }
-    .items7 {
-      background: url(https://source.unsplash.com/random/100×103) no-repeat
-      center/cover;
-      grid-column: 1 / 2;
-      grid-row: 4 / 5;
-    }
-    .items8 {
-      background: url(https://source.unsplash.com/random/100×104) no-repeat
-      center/cover;
-      grid-column: 2 / 3;
-      grid-row: 4 / 5;
-    }
-    .items9 {
-      background: url(https://source.unsplash.com/random/100×105) no-repeat
-      center/cover;
-      grid-column: 3 / 4;
-      grid-row: 4 / 5;
-    }
-    .item10 {
-      
-      grid-column: 1 / 2;
-      grid-row: 1 / 4;
-      color: blue;
-    }
-    
-  }
-  .item3 {
-    grid-row: 4 / 5;
-    grid-column: 1 / 2;
-    
-    
-  }
-  .item4 {
-    grid-row: 3 / 4;
-    grid-column: 2 / 3;
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
   }
 }
