--- a/style/style.css
+++ b/style/style.css
@@ -13,23 +13,25 @@ html {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.page-container {
+.page-wrapper {
   position: relative;
   margin-top: 20px;
   margin: auto;
   width: 850px;
+  min-height: 100vh;
+  top: 20px;
 }
 
-.page-container .title,
-.page-container .site,
-.page-container .likerow,
-.page-container .timerow,
-.page-container .maincontainer,
-.page-container .hero {
+.page-wrapper .header__title,
+.page-wrapper .header__site,
+.page-wrapper .button-wrapper,
+.page-wrapper .nav-wrapper,
+.page-wrapper .main-wrapper,
+.page-wrapper .header {
   position: absolute;
 }
 
-.page-container .hero {
+.page-wrapper .header {
   width: 850px;
   height: 300px;
   margin: auto;
@@ -40,7 +42,7 @@ html {
   top: -9px;
 }
 
-.page-container .hero .picture {
+.page-wrapper .header__img {
   height: 186px;
   width: 186px;
   background: url(https://source.unsplash.com/random/300×300) no-repeat center/cover;
@@ -50,68 +52,76 @@ html {
   box-shadow: 1px 1px 3px, -1px -1px 3px;
 }
 
-.page-container .hero .title {
+.page-wrapper .header__title {
   top: 144px;
   left: 231px;
   color: #f5f5f5;
-  font-size: 1.75rem;
+  font-size: 1.65rem;
   font-weight: 600;
 }
 
-.page-container .hero .site {
+.page-wrapper .header__site {
   top: 175px;
   left: 231px;
   color: #f5f5f5;
   font-size: 1.2rem;
 }
 
-.page-container .hero .bttn {
-  border: white dotted 3px;
-  background-color: white;
-  width: 100px;
-  cursor: pointer;
-}
-
-.page-container .hero .likerow {
+.page-wrapper .header .button-wrapper {
   top: 221px;
   left: 430px;
 }
 
-.page-container .hero .bttn {
-  height: 30px;
-  border-radius: 2px;
-}
-
-.page-container .hero .b2,
-.page-container .hero .b3 {
-  border-right: rgba(0, 0, 0, 0.2) solid 1px;
-}
-
-.page-container .hero .likebuttons {
+.page-wrapper .header .buttons {
   display: inline-flex;
   top: 30px;
   left: 30px;
 }
 
-.page-container .hero .likebuttons .b1 {
+.page-wrapper .header .buttons__bttn {
+  border: white dotted 3px;
+  background-color: white;
+  width: 100px;
+  cursor: pointer;
+  height: 30px;
+  border-radius: 2px;
+}
+
+.page-wrapper .header .buttons__bttn-2, .page-wrapper .header .buttons__bttn-3 {
+  border-right: rgba(0, 0, 0, 0.4) solid 1px;
+}
+
+.page-wrapper .header .buttons__bttn-1 {
   margin-right: 8px;
 }
 
-.page-container .hero .timerow {
+.page-wrapper .header .nav-wrapper {
   top: 252px;
   left: 200px;
   z-index: -1;
 }
 
-.page-container .hero .timerow .timebuttons {
+.page-wrapper .header .nav-wrapper__bttn-2, .page-wrapper .header .nav-wrapper__bttn-3 {
+  border-right: rgba(0, 0, 0, 0.2) solid 1px;
+}
+
+.page-wrapper .header .nav {
   display: inline-flex;
 }
 
-.page-container .hero .timerow .timebuttons .bttn {
+.page-wrapper .header .nav__bttn {
+  background-color: white;
+  width: 100px;
   height: 60px;
+  cursor: pointer;
+  border: white dotted 3px;
 }
 
-.page-container .hero .timerow::before {
+.page-wrapper .header .nav__bttn-1, .page-wrapper .header .nav__bttn-2, .page-wrapper .header .nav__bttn-3, .page-wrapper .header .nav__bttn-4 {
+  border-right: rgba(0, 0, 0, 0.2) solid 1px;
+}
+
+.page-wrapper .header .nav::before {
   content: " \00a0";
   display: inline-block;
   background-color: white;
@@ -123,7 +133,7 @@ html {
   width: 200px;
 }
 
-.page-container .hero .timerow::after {
+.page-wrapper .header .nav::after {
   content: " \00a0";
   display: inline-block;
   background-color: white;
@@ -135,13 +145,13 @@ html {
   width: 165px;
 }
 
-.page-container .maincontainer {
+.page-wrapper .main-wrapper {
   left: 0px;
   top: 332px;
   color: blue;
 }
 
-.page-container .maincontainer .container {
+.page-wrapper .main {
   display: grid;
   grid-template-columns: 328px 512px;
   grid-template-rows: 10px repeat(7, 100px);
@@ -149,141 +159,116 @@ html {
   gap: 10px;
 }
 
-.page-container .maincontainer .container .gridi {
-  background-color: #f6f7f8;
-}
-
-.page-container .maincontainer .container .item1:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.page-container .maincontainer .container .item2:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.page-container .maincontainer .container .item3:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.page-container .maincontainer .container .item1 {
+.page-wrapper .main .post-txt {
   grid-column: 2 / 3;
   grid-row: 1 / 4;
   display: grid;
   grid-template-columns: 10px 75px 1fr;
   grid-template-rows: 10px 75px 8px 2fr 1fr;
-  gap: 2px;
-  color: blue;
-  background-color: #f6f7f8;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.page-container .maincontainer .container .item1 .gridi2 {
+.page-wrapper .main .post-txt__img {
   background: url(https://source.unsplash.com/random/300×300) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   height: 75px;
 }
 
-.page-container .maincontainer .container .item1 .gridi3 {
+.page-wrapper .main .post-txt__info {
   align-self: center;
   grid-row: 2 / 3;
   grid-column: 3 / 4;
   font-size: 0.75rem;
 }
 
-.page-container .maincontainer .container .item1 .gridi4 {
+.page-wrapper .main .post-txt__post {
   grid-column: 2 / 4;
   grid-row: 4 / 5;
   color: black;
   align-self: center;
+  background-color: #f6f7f8;
   background: #833ab4;
   background: linear-gradient(90deg, #833ab4 0%, #fd1d1d 50%, #fcb045 100%);
   height: 100px;
-  color: black;
-  font-size: 0.8rem;
+  color: whitesmoke;
+  font-size: 1.2rem;
 }
 
-.page-container .maincontainer .container .item1 .gridi5 {
+.page-wrapper .main .post-txt__bttns {
   grid-column: 2 / 4;
   grid-row: 5 / 6;
   font-size: 0.75rem;
 }
 
-.page-container .maincontainer .container .item2 {
+.page-wrapper .main .aside {
   display: grid;
-  grid-template-columns: repeat(3, 105px);
+  grid-template-columns: repeat(3, 108px);
   grid-template-rows: 20px repeat(3, 1fr);
-  gap: 1px;
   grid-row: 1 / 5;
-  background-color: #f6f7f8;
-  color: black;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.page-container .maincontainer .container .item2 .items1 {
+.page-wrapper .main .aside__img-1 {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   background: url(https://source.unsplash.com/random/100×100) no-repeat center/cover;
 }
 
-.page-container .maincontainer .container .item2 .items2 {
+.page-wrapper .main .aside__img-2 {
   background: url(https://source.unsplash.com/random/103×100) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
 
-.page-container .maincontainer .container .item2 .items3 {
+.page-wrapper .main .aside__img-3 {
   background: url(https://source.unsplash.com/random/302×300) no-repeat center/cover;
   grid-column: 3 / 4;
   grid-row: 2 / 3;
 }
 
-.page-container .maincontainer .container .item2 .items4 {
+.page-wrapper .main .aside__img-4 {
   background: url(https://source.unsplash.com/random/105×100) no-repeat center/cover;
   grid-column: 1 / 2;
   grid-row: 3 / 4;
 }
 
-.page-container .maincontainer .container .item2 .items5 {
+.page-wrapper .main .aside__img-5 {
   background: url(https://source.unsplash.com/random/100×101) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 }
 
-.page-container .maincontainer .container .item2 .items6 {
+.page-wrapper .main .aside__img-6 {
   background: url(https://source.unsplash.com/random/100×102) no-repeat center/cover;
   grid-column: 3 / 4;
   grid-row: 3 / 4;
 }
 
-.page-container .maincontainer .container .item2 .items7 {
+.page-wrapper .main .aside__img-7 {
   background: url(https://source.unsplash.com/random/100×103) no-repeat center/cover;
   grid-column: 1 / 2;
   grid-row: 4 / 5;
 }
 
-.page-container .maincontainer .container .item2 .items8 {
+.page-wrapper .main .aside__img-8 {
   background: url(https://source.unsplash.com/random/100×104) no-repeat center/cover;
   grid-column: 2 / 3;
   grid-row: 4 / 5;
 }
 
-.page-container .maincontainer .container .item2 .items9 {
+.page-wrapper .main .aside__img-9 {
   background: url(https://source.unsplash.com/random/100×105) no-repeat center/cover;
   grid-column: 3 / 4;
   grid-row: 4 / 5;
 }
 
-.page-container .maincontainer .container .item2 .item10 {
+.page-wrapper .main .aside__txt-1 {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   background-color: #f6f7f8;
   color: rgba(29, 29, 29, 0.685);
 }
 
-.page-container .maincontainer .container .item2 .item11 {
+.page-wrapper .main .aside__txt-2 {
   grid-column: 3 / 4;
   grid-row: 1 / 2;
   justify-self: end;
@@ -291,59 +276,64 @@ html {
   color: rgba(29, 29, 29, 0.685);
 }
 
-.page-container .maincontainer .container .item2::after {
-  content: "dfdfdfd \00a0";
-  background-color: yellow;
-  border: black solid 3px;
-  position: relative;
-  top: 33px;
-  right: 33px;
-  z-index: 99999;
-}
-
-.page-container .maincontainer .container .item3 {
+.page-wrapper .main .post-img {
   grid-column: 2 / 3;
+  grid-row: 4 / 7;
   display: grid;
   grid-template-columns: 10px 75px 1fr;
   grid-template-rows: 10px 75px 8px 200px 20px;
-  color: blue;
-  background-color: #f6f7f8;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.page-container .maincontainer .container .item3 .gridi2 {
+.page-wrapper .main .post-img__img {
   background: url(https://source.unsplash.com/random/300×300) no-repeat center/cover;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
 }
 
-.page-container .maincontainer .container .item3 .gridi3 {
+.page-wrapper .main .post-img__info {
   align-self: center;
   font-size: 0.75rem;
   grid-row: 2 / 3;
   grid-column: 3 / 4;
 }
 
-.page-container .maincontainer .container .item3 .gridi4 {
+.page-wrapper .main .post-img__post {
   background: url(https://source.unsplash.com/random/103×100) no-repeat center/cover;
-  text-align: center;
   grid-row: 4 / 5;
   grid-column: 1 / 4;
 }
 
-.page-container .maincontainer .container .item3 .gridi5 {
+.page-wrapper .main .post-img__bttns {
   padding: 0;
   font-size: 0.75rem;
   grid-row: 5 / 6;
-  grid-column: 1 / 4;
+  grid-column: 2 / 4;
   background-color: #f6f7f8;
 }
 
-.page-container #footer {
-  position: absolute;
-  bottom: 0;
+.page-wrapper .main .post,
+.page-wrapper .main .aside {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  gap: 2px;
+  background-color: #f6f7f8;
+  color: #5566a8;
+}
+
+.page-wrapper .main .post .post:hover,
+.page-wrapper .main .post .aside:hover,
+.page-wrapper .main .aside .post:hover,
+.page-wrapper .main .aside .aside:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.page-wrapper .footer {
+  content: "\00A9";
+  position: fixed;
+  bottom: 10px;
   width: 100%;
   height: 2.5rem;
+  z-index: 999999;
+  margin-left: 10px;
 }
 /*# sourceMappingURL=style.css.map */
